--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rkraftcomua</title>
+    <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+  	<header class="navbar navbar-fixed-top navbar-inverse">
+  		<div class="container">
+  		<li><%= link_to 'Home', home_path %></li>
+  		<li><%= link_to 'Catalog', catalog_path %> </li>
+  		<li><%= link_to 'Services', services_path %></li>
+  	</div>
+  </header>
     <%= yield %>
   </body>
 </html>
