--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
-        <td><%= product.price %></td>
-        <td><%= product.image_url %></td>
+        <td><%= number_to_currency(product.price) %></td>
+        <td><%= image_tag(product.image_url) %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
