--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @product.price %>
+  <%= number_to_currency(@product.price) %>
 </p>
 
 <p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
+  <strong>Image:</strong>
+  <%= image_tag(@product.image_url) %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
