--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<div class="center jumbotron">
 <p id="notice"><%= notice %></p>
 
 <h1>Products</h1>
@@ -16,6 +17,7 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%= product.title %></td>
         <td><%= product.title %></td>
         <td><%= product.description %></td>
         <td><%= number_to_currency(product.price) %></td>
