--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,25 @@
+<div class="center jumbotron">
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
   <%= @product.title %>
-</p>
+</p><br />
 
 <p>
   <strong>Description:</strong>
   <%= @product.description %>
-</p>
+</p><br />
 
 <p>
   <strong>Price:</strong>
   <%= number_to_currency(@product.price) %>
-</p>
+</p><br />
 
 <p>
   <strong>Image:</strong>
   <%= image_tag(@product.image_url) %>
-</p>
+</p><br />
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
