some product views, model validations and tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -215,6 +215,7 @@
   </header>
 
   <div class="container">
+    <body class='<% controller.controller_name %>'>
     <%= yield %>
   </div>
   </body>
