--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,35 +1,32 @@
 <div class="center jumbotron">
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1><strong>Products</strong></h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <thead style="background color: #e0f8f8">
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= number_to_currency(product.price) %></td>
-        <td><%= image_tag(product.image_url) %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+<% @products.each do |product| %>
+  <tr class="<%= cycle('list_line_odd', 'list_line_even')%>">
+   <td> 
+    <%= image_tag(product.image_url, class: 'list_image') %>
+  </td>
+
+   <td class="list_description">
+     <dl>
+       <dt><%= product.title %></dt>
+       <dd><%= truncate(strip_tags(product.description), length:80) %></dd>
+     </dl>
+    </td>
+
+    <td class="list actions">
+      <%= link_to 'Show Product', product %><br/>
+      <%= link_to 'Edit Product', edit_product_path(product) %><br/>
+      <%= link_to 'Delete Product', product, method: :delete, data: { confirm: 'Are you sure?'} %>
+    </td>
+  </tr>
+  <% end %>
 </table>
 
-<br>
 
 <%= link_to 'New Product', new_product_path %>
