--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -11,38 +11,102 @@
     <title>Rkraftcomua | plastics and molding</title>
     <meta name="keywords" content="">
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+   
     <!-- Google fonts - Montserrat and Merriweather-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather:400,400italic" rel="stylesheet" type="text/css">
+
+  <%= stylesheet_link_tag 'carousel.css', media: 'print, screen' %>
+  <%= javascript_include_tag('jquery.js') %>
+  <%= javascript_include_tag('jquery.min.js') %>
+ <%= javascript_include_tag('bootstrap.min.js') %>
+ <%= javascript_include_tag('carousel.js') %>
     <!-- Font Awesome css-->
-    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
-    <!-- Owl Carousel-->
-    <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-    <!-- Theme stylesheet-->
-    <link id="theme-stylesheet" href="css/style.default.css" rel="stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link href="css/custom.css" rel="stylesheet">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    <!-- Favicon-->
+
+
     <link rel="shortcut icon" href="favicon.png">
   </head>
   <body class="undefined">
-   
+     <style>
+  .carousel-inner > .carousel-item > img,
+  .carousel-inner > .carousel-item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
     
-   
     <!-- *** LOGIN MODAL END ***-->
     <!-- *** SLIDER ***-->
-    <div id="slider" class="owl-carousel owl-theme">
-      <div class="item"><a href="#"><img src="img/slide1.jpg" alt="" class="img-fluid"></a></div>
-      <div class="item"><a href="#"><img src="img/slide2.jpg" alt="" class="img-fluid"></a></div>
-      <div class="item"><a href="#"><img src="img/slide3.jpg" alt="" class="img-fluid"></a></div>
-      <div class="item"><a href="#"><img src="img/slide4.jpg" alt="" class="img-fluid"></a></div>
-      <div class="item"><a href="#"><img src="img/slide5.jpg" alt="" class="img-fluid"></a></div>
-      <div class="item"><a href="#"><img src="img/slide6.jpg" alt="" class="img-fluid"></a></div>
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel" data-slide-to="1"></li>
+    <li data-target="#carousel" data-slide-to="2"></li>
+  </ul>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="<%= asset_path 'box1.jpg' %>" alt="lunchbox">
+      <div class="carousel-caption">
+        <h3>Lunch-boxes</h3>
+        <p>Molding</p>
+      </div>
     </div>
+
+    <div class="carousel-item">
+      <img src="<%= asset_path 'suchiboxx.jpg' %>" alt="clamshell">
+      <div class="carousel-caption">
+        <h3>Suchi-boxes</h3>
+        <p>Molding</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="<%= asset_path 'shelforg.jpg' %>" alt="shelforganizer">
+      <div class="carousel-caption">
+        <h3>Molded trays</h3>
+        <p>Molding</p>
+      </div>
+    </div>
+  </div>
+    
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#carousel" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#carousel" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+<script>
+$(document).ready(function(){
+    // Activate Carousel
+    $("#carousel").carousel();
+    
+    // Enable Carousel Indicators
+    $(".item1").click(function(){
+        $("#carousel").carousel(0);
+    });
+    $(".item2").click(function(){
+        $("#carousel").carousel(1);
+    });
+    $(".item3").click(function(){
+        $("#carousel").carousel(2);
+    });
+
+    
+    // Enable Carousel Controls
+    $(".left").click(function(){
+        $("#carousel").carousel("prev");
+    });
+    $(".right").click(function(){
+        $("#carousel").carousel("next");
+    });
+});
+</script>
+
+
     <!-- /#slider-->
     <!-- *** SLIDER END ***-->
     <div id="all">
@@ -441,12 +505,8 @@ We always proudly note as sells of our customers grow. </p>
 
     </div>
     <!-- #### JavaScript files ###-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/popper.js/umd/popper.min.js"> </script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="vendor/jquery.cookie/jquery.cookie.js"> </script>
-    <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+   
     <!-- main script-->
-    <script src="js/front.js"> </script>
+   
   </body>
 </html>
