--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,7 +4,7 @@
 <table>
 	<tr>
 	<% @cart.line_items.each do |item| %>
-	 <td><%= item.quantity %> %times; <%= item.product.title %></td>
+	 <td><%= item.quantity %> &times; <%= item.product.title %></td>
 	 <td><%= item.product.title %></td>
 	 <td class="item_price"><%= number_to_currency(item.total_price) %></td>
 	</tr>
