--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,24 +1,3 @@
 <p id="notice"><%= notice %></p>
 
-<h2>Your cart</h2>
-<table>
-	<tr>
-	<% @cart.line_items.each do |item| %>
-	 <td><%= item.quantity %> &times; <%= item.product.title %></td>
-	 <td><%= item.product.title %></td>
-	 <td class="item_price"><%= number_to_currency(item.total_price) %></td>
-	</tr>
-	<% end %>
-    
-    <tr class="total line">
-      <td colspan="2">Total</td>
-      <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-    </tr>
-
- </table>
-
-<%= button_to 'Empty Cart', @cart, method: :delete,
-    data: { confirm: 'Are you sure?'} %>
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= render @cart %>
