--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -474,7 +474,7 @@ We always proudly note as sells of our customers grow. </p>
             <!-- /.col-lg-3-->
             <div class="col-lg-3 col-md-6">
               <h4>Where to find us</h4>
-              <p><strong>Maps</strong><br>Ukraine<br>		Kyiv Region <br>		Find on map<br>		Kyiv <br><strong>Contacts </strong></p><a href="contact.html">Go to contact page</a>
+              <p><strong>Maps</strong><br>Ukraine<br>		Kyiv Region <br>		Find on map<br>		Kyiv <br><strong>Contacts </strong></p><a href="<%= contacts_path %>">Go to contact page</a>
               <hr class="d-block d-md-none">
             </div>
             <!-- /.col-lg-3-->
