add subscription channel

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,3 +1,4 @@
+<% unless @cart.empty? %>
 <h2>Your Cart</h2>
 <table>
 
@@ -10,3 +11,5 @@
 </table>
  <%= button_to 'Empty cart', cart, method: :delete,
 data: { confirm: 'Are you sure?' } %>
+
+<% end %>
