fix cart appearance, add image model, pagination for gallery

--- a/app/views/main/gallery.html.erb
+++ b/app/views/main/gallery.html.erb
@@ -1,2 +1,9 @@
 <div class="center jumbotron">
 <%= provide(:title, "Gallery") %>
+
+<div class="digg_pagination">
+    <div class="page_info">
+      <%= page_entries_info @images %>
+    </div>
+    <%= will_paginate @images, :container => false %>
+  </div>
