--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -320,9 +320,9 @@ We always proudly note as sells of our customers grow. </p>
                         </div>
                         <!-- /.ribbon-->
                         <div class="row thumbs">
-                          <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="img/detailsquare.jpg" alt="" class="img-fluid"></a></div>
-                          <div class="col-4"><a href="img/detailbig2.jpg" class="thumb"><img src="img/detailsquare2.jpg" alt="" class="img-fluid"></a></div>
-                          <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="img/detailsquare3.jpg" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>"" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>" alt="" class="img-fluid"></a></div>
                         </div>
                       </div>
                       <div class="col-sm-6">
