--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -1,4 +1,124 @@
 <div class="center jumbotron">
 <% provide(:title, "Contacts") %>
 
- 
+
+
+    <section class="background-gray-lightest">
+      <div class="container">
+        <div class="breadcrumbs">
+          <ul class="breadcrumb">
+            <li><a href="<%= home_path %>">Home</a></li>
+           
+          </ul>
+        </div>
+        <h1 class="heading"></h1>
+        <p class="lead">We will like to hear from you.  </p>
+      </div>
+    </section>
+    <section>  
+      <div id="contact" class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="box-simple">
+              <div class="icon"><i class="pe-7s-map-2"></i></div>
+              <h4 class="heading margin-bottom">Address</h4>
+              <p><br>Kyiv<br>Ukraine </p>
+            </div>
+            <div class="box-simple">
+              <div class="icon"><i class="pe-7s-phone"></i></div>
+              <h4 class="heading margin-bottom">Call center</h4>
+              <p class="text-muted"></p>
+              <p><strong>+38 066 289 91 33</strong></p>
+            </div>
+            <div class="box-simple">
+              <div class="icon"><i class="pe-7s-mail-open"></i></div>
+              <h4 class="heading margin-bottom">Send your quotes on email</p>
+              <ul>
+                <li><strong><a href="mailto:">rkraft@rkraft.com.ua</a></strong></li>
+              
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-7 col-lg-offset-1">
+            <div class="icon"><i class="pe-7s-pen"></i></div>
+            <h4 class="heading margin-bottom">Contact form</h4>
+            <p class="text-muted">Ask a question or make a proposition</p>
+            <form>
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label for="firstname">Firstname</label>
+                    <input id="firstname" type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label for="lastname">Lastname</label>
+                    <input id="lastname" type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input id="email" type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input id="subject" type="text" class="form-control">
+                  </div>
+                </div>
+                <div class="col-sm-12">
+                  <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" class="form-control"></textarea>
+                  </div>
+                </div>
+                <div class="col-sm-12">
+                  <button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Send message</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+    <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
+    <footer class="footer">
+      <div class="footer__block">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-sm-12">
+              <h4 class="heading">About Multi</h4>
+              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus magna. Cras in mi at felis aliquet congue.  Vivamus magna. Cras in mi at felis aliquet congue.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. </p>
+            </div>
+            
+
+              <!-- Please do not remove the backlink to us unless you support us at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Javascript files-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.cookie.js"> </script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/front.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
+    <!---->
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>
+  </body>
+</html>
