--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -92,13 +92,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-sm-12">
-              <h4 class="heading">About Multi</h4>
-              <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus magna. Cras in mi at felis aliquet congue.  Vivamus magna. Cras in mi at felis aliquet congue.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. </p>
+              <h4 class="heading">About Us </h4>
+              <p>P We develop and produce plastic packaging of any shape and complexity, for a wide range of goods, containers, lunch boxes, sushi boxes.  Our production is characterized by an individual approach, we can select the optimal form of packaging material, attractive and optimized design, with your company logo.  </p>
             </div>
             
 
-              <!-- Please do not remove the backlink to us unless you support us at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
+              
             </div>
           </div>
         </div>
@@ -110,8 +109,7 @@
     <script src="js/jquery.cookie.js"> </script>
     <script src="js/lightbox.min.js"></script>
     <script src="js/front.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-    <!---->
+    
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
