--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -395,20 +395,20 @@ We always proudly note as sells of our customers grow. </p>
           <div id="blog-homepage" class="row">
             <div class="col-sm-6">
               <div class="post">
-                <h4><a href="post.html">Another site</a></h4>
+                <h4><a href="#">Trade equipment products</a></h4>
                 <p class="author-category">By <a href="#">Catalog</a> in <a href="">Our style</a></p>
                 <hr>
-                <p class="intro">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                <p class="read-more"><a href="post.html" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="intro">We produce custom prodmotional and trade equipment for shops and brand promotion for about 15 years. We combine plastic production technologies and different branding technics to meet your needs.</p>
+                <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="post">
-                <h4><a href="post.html">Who is who - example blog post</a></h4>
-                <p class="author-category">By <a href="#">John Slim</a> in <a href="">About Minimal</a></p>
+                <h4><a href="#">Who is who - example blog post</a></h4>
+                <p class="author-category">Custom <a href="#">Plastic Packaging</a> in <a href="">About Us</a></p>
                 <hr>
-                <p class="intro">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-                <p class="read-more"><a href="post.html" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="intro">We have rich experience in plastic packaging production for foods, candies, retail, householding goods, hardware, fasteners of PET, PVC, PP, HIPS , with thickness of material from 0,2 to 2 mm. We have facilities and knowledge to support and provide quality for customized plastic packaging. We made customized plastic packaging of all types, starting with 3d-model prototyping, picking material, building пресс-форму and then molding products. </p>
+                <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
               </div>
             </div>
           </div>
