add atom feed to product and relations

--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -93,7 +93,7 @@
           <div class="row">
             <div class="col-md-8 col-sm-12">
               <h4 class="heading">About Us </h4>
-              <p>P We develop and produce plastic packaging of any shape and complexity, for a wide range of goods, containers, lunch boxes, sushi boxes.  Our production is characterized by an individual approach, we can select the optimal form of packaging material, attractive and optimized design, with your company logo.  </p>
+              <p>We develop and produce plastic packaging of any shape and complexity, for a wide range of goods, containers, lunch boxes, sushi boxes.  Our production is characterized by an individual approach, we can select the optimal form of packaging material, attractive and optimized design, with your company logo.  </p>
             </div>
             
 
