--- a/app/views/main/catalog.html.erb
+++ b/app/views/main/catalog.html.erb
@@ -1,3 +1,3 @@
-<h1>Main#catalog</h1>
-<p>Find me in app/views/main/catalog.html.erb</p>
+<h1>Main catalog</h1>
+<p>General products list</p>
 <%= render partial: 'products/index' %>
