--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -478,16 +478,25 @@ We always proudly note as sells of our customers grow. </p>
               <hr class="d-block d-md-none">
             </div>
             <!-- /.col-lg-3-->
+            <div class=container>
             <div class="col-lg-3 col-md-6">
+            
               <h4>Get the news</h4>
-              <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-              <form>
-                <div class="input-group">
-                  <input type="text" class="form-control">
-                  <div class="input-group-append">
-                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-send">              </i></button>
+            </div>
+              <div class="col-lg-3 col-md-6">
+              <div class="form-holder">
+             <%= form_for(@subscription, path: '/subscriptions', method: :post) do |f| %>
+                <div class="form-group">
+                  <%= f.email_field :email, placeholder: 'Type your email address' %>
+                  <%= f.button 'Subscribe', class: 'submit', type: 'submit' %>
+                  
+                  <% end %>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+
                 <!-- /input-group-->
               </form>
               <hr>
