link to acryllic from dropdown menu, more images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,8 @@
                     <div class="col-sm-4 col-lg-3">
                       <h3>Catalog</h3>
                       <ul>
-                        <li><a href="#">Acryllic Stands</a></li>
-                        <li><a href="#l">Metal Stands</a></li>
+                        <li><a href="<%= 'acryllic' %>">Acryllic Stands</a></li>
+                        <li><a href="#">Metal Stands</a></li>
                         <li><a href="#">Molded Displays</a></li>
                         <li><a href="#">Clamshells</a></li>
                       </ul>
