content at footer

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -170,7 +170,7 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product2.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelftalkers.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
