--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -207,6 +207,15 @@
     </div>
   <% end %>
 
+        <% if session[:user_id] %>
+       <ul>
+         <li><%= link_to 'Orders', orders_path %></li>
+         <li><%= link_to 'Products', products_path %></li>
+         <li><%= link_to 'Users', users_path %></li>
+       </ul>
+       <%= button_to 'Logout',  destroy_user_session %>
+      <% end %>
+
   </header>
 
   <div class="container">
