front page addings

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -162,7 +162,7 @@ We always proudly note as sells of our customers grow. </p>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="#">Plastic packaging: lunchboxes</a></h3>
-                  <p class="price">$143.00 per 1000</p>
+                  <p class="price">$ 0.44</p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -173,11 +173,12 @@ We always proudly note as sells of our customers grow. </p>
                 <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelftalkers.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
+
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Shelftalker</a></h3>
                   <p class="price">
-                    <del>$280</del> $143.00
+                    <del>$2.4</del> $2.12
                   </p>
                 </div>
                 <!-- /.text-->
@@ -196,13 +197,13 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product3.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'box1.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Lunch Box</a></h3>
-                  <p class="price">$143.00</p>
+                  <p class="price">$0.52</p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -210,13 +211,13 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product4.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'blp.png' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Clamshell</a></h3>
-                  <p class="price">$143.00</p>
+                  <p class="price">$0.1</p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -224,14 +225,14 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product3.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelforg.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Molded dispenser</a></h3>
                   <p class="price">
-                    <del>$280</del> $143.00
+                    <del>$280</del> $6.05
                   </p>
                 </div>
                 <!-- /.text-->
@@ -250,13 +251,13 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product4.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'suchiboxx.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Suchi-box</a></h3>
-                  <p class="price">$143.00</p>
+                  <p class="price">$0.44</p>
                 </div>
                 <!-- /.text-->
                 <div class="ribbon new">
@@ -269,12 +270,12 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product2.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'disacr.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Acryllic Display</a></h3>
+                  <h3><a href="<%= products_path %>">Acryllic Display</a></h3>
                   <p class="price">$143.00</p>
                 </div>
                 <!-- /.text-->
@@ -288,13 +289,13 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="img/product1.jpg" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'cosmetics.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="detail.html">Acryllic Stand</a></h3>
-                  <p class="price">$143.00</p>
+                  <p class="price">$5.2</p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -321,13 +322,13 @@ We always proudly note as sells of our customers grow. </p>
                         <!-- /.ribbon-->
                         <div class="row thumbs">
                           <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>"" alt="" class="img-fluid"></a></div>
-                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>" alt="" class="img-fluid"></a></div>
-                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'box1.jpg' %>" class="thumb"><img src="<%= asset_path 'box1.jpg' %>" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'suchiboxx.jpg' %>" class="thumb"><img src="<%= asset_path 'suchiboxx.jpg' %>" alt="" class="img-fluid"></a></div>
                         </div>
                       </div>
                       <div class="col-sm-6">
-                        <h2>Salad-box</h2>
-                        <p class="text-muted text-small text-center">Lunch box has durable and fit bottom (black) and cover (transparent), made of quality PET. Product is good for posing and shelving foods at shops, or for food delivery companies, restaurant networks. Product is made for demand, it is unique, fitting customers' sizes and design, may have logo on cover. Lunch box has durable and fit bottom (black) and cover (transparent), made of quality PET. </p>
+                        <h2>Lunch  box / Suchi box / Salad-box</h2>
+                        <p class="text-muted text-small text-center">Lunch box has durable and fit bottom (black) and cover (transparent), made of quality PET. Product is good for posing and shelving foods at shops, or for food delivery companies, restaurant networks. Product is made for demand, it is unique, fitting customers' sizes and design, may have logo on cover. Lunch box has durable and fit bottom (black) and cover (transparent), made of high quality PET. </p>
                         <div class="box">
                           <form>
                             <div class="sizes">
@@ -342,7 +343,7 @@ We always proudly note as sells of our customers grow. </p>
                                 <input id="size_l" type="radio" name="size" value="l" class="size-input">
                               </label>
                             </div>
-                            <p class="price">$124.00</p>
+                            <p class="price">$0.44</p>
                             <p class="text-center">
                               <button type="submit" class="btn btn-outline-primary"><i class="fa fa-shopping-cart"></i> Add to cart</button>
                               <button type="submit" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="btn btn-outline-secondary"><i class="fa fa-heart-o"></i></button>
