--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -181,7 +181,11 @@
       <li><%= link_to 'Catalog', catalog_path %> </li>
       <li><%= link_to 'Services', services_path %></li>
       <li><%= link_to 'Contacts', contacts_path %></li>
-    
+     
+     <ul>
+      <li><a href="https://rkraftcomua.herokuapp.com/home"><%= t('.home') %></a></li>
+       <li><a href="https://rkraftcomua.herokuapp.com/catalog"><%= t('.catalog') %></a></li>
+       <li><a href="https://rkraftcomua.herokuapp.com/contacts"><%= t('.contacts') %></a></li>
 
     <nav>
       <ul class="nav navbar-nav navbar-right">
