--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,10 @@
     </td>
     <td class= "price_line">
       <span class="price"><%= number_to_currency(product.price) %></span>
-    <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+
+     <%= button_to t('.add_html'),
+     line_items_path(product_id: product, locale: I18n.locale),
+remote: true %>
   </td>
   </tr>
   <% end %>
