--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -183,9 +183,9 @@
       <li><%= link_to 'Contacts', contacts_path %></li>
      
      <ul>
-      <li><a href="https://rkraftcomua.herokuapp.com/home"><%= t('.home') %></a></li>
-       <li><a href="https://rkraftcomua.herokuapp.com/catalog"><%= t('.catalog') %></a></li>
-       <li><a href="https://rkraftcomua.herokuapp.com/contacts"><%= t('.contacts') %></a></li>
+      <li><a href="https://#{host}/home"><%= t('.home') %></a></li>
+       <li><a href="https://#{host}/catalog"><%= t('.catalog') %></a></li>
+       <li><a href="https://#{host}/contacts"><%= t('.contacts') %></a></li>
 
     <nav>
       <ul class="nav navbar-nav navbar-right">
