--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@
                 </div>
               </div>
             </div>
-            <div class="nav-item dropdown yamm-fw"><a href="#" data-toggle="dropdown" data-hover="dropdown" data-delay="200" class="nav-link dropdown-toggle">Gallery <b class="caret"></b></a>
+            <div class="nav-item dropdown yamm-fw"><a href="<%= gallery_path %>" data-toggle="dropdown" data-hover="dropdown" data-delay="200" class="nav-link dropdown-toggle">Gallery <b class="caret"></b></a>
               <div class="dropdown-menu">
                 <div class="yamm-content">
                   <div class="row">
