--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -232,7 +232,7 @@ We always proudly note as sells of our customers grow. </p>
                 <div class="text">
                   <h3><a href="detail.html">Molded dispenser</a></h3>
                   <p class="price">
-                    <del>$280</del> $6.05
+                    <del>$6.5</del> $6.05
                   </p>
                 </div>
                 <!-- /.text-->
@@ -378,7 +378,7 @@ We always proudly note as sells of our customers grow. </p>
                 <div class="icon icon-lg"><i class="fa fa-file-code-o"></i></div>
                 <h1>Do you want to see more?</h1>
                 <p class="lead">Molded plastic stand for chocolate , for 2 types , with sticker ,  silk-screen printing</p>
-                <p class="text-center"><a href="index2.html" class="btn btn-outline-white-primary">See latest gallery </a></p>
+                <p class="text-center"><a href="<%= gallery_path %>" class="btn btn-outline-white-primary">See latest gallery </a></p>
               </div>
             </div>
           </div>
