--- a/app/views/main/gallery.html.erb
+++ b/app/views/main/gallery.html.erb
@@ -1,9 +1,184 @@
 <div class="center jumbotron">
 <%= provide(:title, "Gallery") %>
+<p>Examples of products made for customers</p>
 
+<!--pagination stuff 
 <div class="digg_pagination">
     <div class="page_info">
       <%= page_entries_info @images %>
     </div>
-    <%= will_paginate @images, :container => false %>
-  </div>
+   <%= will_paginate @images, :container => false %> 
+  </div>  -->
+                <!-- /.image-->
+       <div class="box text-center">
+            <h3 class="text-uppercase">View the Gallery</h3>
+            <h4 class="text-muted"><span class="accent">Find your solution</span> for design</h4>
+          </div>
+          <div class="row products">
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= gallery_path %>"><img src="<%= asset_path 'title.png' %>" alt="Rkraft" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="#">Plastic packaging: lunchboxes</a></h3>
+                  <p class="price">$ 0.44</p>
+                </div>
+                <!-- /.text-->
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'composed_stands.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="detail.html">Info/products stands</a></h3>
+                                 </div>
+              
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'shelftalker.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="detail.html">Shelftalker</a></h3>
+                 
+                </div>
+                <!-- /.text-->
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'blp.png' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="detail.html">Clamshell</a></h3>
+                                </div>
+                <!-- /.text-->
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'lightbox.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="#">Lightbox</a></h3>
+                 
+                  
+                </div>
+                <!-- /.text-->
+ 
+              
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'tray_chocolate.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="#">Molded tray</a></h3>
+                 
+                </div>
+                <!-- /.text-->
+               
+             
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'acrdyspl.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="<%= products_path %>">Acryllic Display</a></h3>
+                 
+                </div>
+                <!-- /.text-->
+              
+    
+              </div>
+              <!-- /.product-->
+            </div>
+            <div class="col-md-3 col-sm-4">
+              <div class="product">
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'metal_rack.jpg' %>" alt="" class="img-fluid image1"></a>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                </div>
+                <!-- /.image-->
+                <div class="text">
+                  <h3><a href="detail.html">Metal Rack</a></h3>
+                 
+                </div>
+                <!-- /.text-->
+              </div>
+              <!-- /.product-->
+            </div>
+            <!-- /.col-md-4-->
+            <div id="product-quick-view-modal" tabindex="-1" role="dialog" aria-hidden="false" class="modal fade">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
+                    <div class="row quick-view product-main">
+                      <div class="col-sm-6">
+                        <div class="quick-view-main-image"><img src="img/detailbig1.jpg" alt="" class="img-fluid"></div>
+                        <div class="ribbon ribbon-quick-view sale">
+                          <div class="theribbon">SALE</div>
+                          <div class="ribbon-background"></div>
+                        </div>
+                        <!-- /.ribbon-->
+                        <div class="ribbon ribbon-quick-view new">
+                          <div class="theribbon">NEW</div>
+                          <div class="ribbon-background"></div>
+                        </div>
+                        <!-- /.ribbon-->
+                        <div class="row thumbs">
+                          <div class="col-4"><a href="<%= asset_path 'box5.jpg' %>" class="thumb"><img src="<%= asset_path 'box5.jpg' %>"" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'box1.jpg' %>" class="thumb"><img src="<%= asset_path 'box1.jpg' %>" alt="" class="img-fluid"></a></div>
+                          <div class="col-4"><a href="<%= asset_path 'suchiboxx.jpg' %>" class="thumb"><img src="<%= asset_path 'suchiboxx.jpg' %>" alt="" class="img-fluid"></a></div>
+                        </div>
+                      </div>
+                      <div class="col-sm-6">
+                        <h2>Lunch  box / Suchi box / Salad-box</h2>
+                        <p class="text-muted text-small text-center">Lunch box has durable and fit bottom (black) and cover (transparent), made of quality PET. Product is good for posing and shelving foods at shops, or for food delivery companies, restaurant networks. Product is made for demand, it is unique, fitting customers' sizes and design, may have logo on cover. Lunch box has durable and fit bottom (black) and cover (transparent), made of high quality PET. </p>
+                        <div class="box">
+                          <form>
+                            <div class="sizes">
+                              <h3>Available sizes</h3>
+                              <label for="size_s"><a href="#">300*800</a>
+                                <input id="size_s" type="radio" name="size" value="s" class="size-input">
+                              </label>
+                              <label for="size_m"><a href="#">1200*1200</a>
+                                <input id="size_m" type="radio" name="size" value="m" class="size-input">
+                              </label>
+                              <label for="size_l"><a href="#">610*750</a>
+                                <input id="size_l" type="radio" name="size" value="l" class="size-input">
+                              </label>
+                            </div>
+                            <p class="price">$0.44</p>
+                            <p class="text-center">
+                              <button type="submit" class="btn btn-outline-primary"><i class="fa fa-shopping-cart"></i> Add to cart</button>
+                              <button type="submit" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="btn btn-outline-secondary"><i class="fa fa-heart-o"></i></button>
+                            </p>
+                          </form>
+                        </div>
