new catalog descriptive pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -449,7 +449,7 @@ button i.fa {
 }
 
 .bar.background-image-fixed-2 {
-  background: url("../img/fixed-background-2.jpg") center top no-repeat;
+  background: url("<%= asset_path 'clamshells.jpg' %>") center top no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
