--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -405,8 +405,8 @@ We always proudly note as sells of our customers grow. </p>
             </div>
             <div class="col-sm-6">
               <div class="post">
-                <h4><a href="#">Who is who - example blog post</a></h4>
-                <p class="author-category">Custom <a href="#">Plastic Packaging</a> in <a href="">About Us</a></p>
+                <h4><a href="#">Custom plastic packaging production</a></h4>
+                <p class="author-category">Custom <a href="<%= 'clamshells' %>">Plastic Packaging</a> in <a href="">About Us</a></p>
                 <hr>
                 <p class="intro">We have rich experience in plastic packaging production for foods, candies, retail, householding goods, hardware, fasteners of PET, PVC, PP, HIPS , with thickness of material from 0,2 to 2 mm. We have facilities and knowledge to support and provide quality for customized plastic packaging. We made customized plastic packaging of all types, starting with 3d-model prototyping, picking material, building пресс-форму and then molding products. </p>
                 <p class="read-more"><a href="#" class="btn btn-outline-primary">Continue reading</a></p>
